--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
     "firebase": "^8.5.0",
+    "ng-starrating": "^1.0.20",
+    "ngx-bar-rating": "^2.0.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
