--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^8.5.0",
     "ng-starrating": "^1.0.20",
     "ngx-bar-rating": "^2.0.0",
+    "ngx-pagination": "^5.1.1",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
